# amelia

./: .dockerignore  .env.example  .gitignore  .review-output.md  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  GEMINI.md  LICENSING.md  Makefile  NOTICE  README.md  SECURITY.md  bot-commit.md  bot-create-branch.md  bot-create-issue.md  bot-create-pr.md  commit_files.py  create_branch.py  create_issue.py  create_pr.py  docker-compose.yml  gen-test-plan.md  package-lock.json  plan.md  post_comment.py  pyproject.toml  quickstart.md  research.md  review_fix_loop.py  review_ui.py  settings.amelia.yaml  skill.md  spec.md
.Jules/: palette.md
.agent/workflows/: commit-push.md  create-pr.md  ensure-doc.md  eval-feedback.md  gen-release-notes.md  gen-test-plan.md  greptile-review.md  prompt-improver.md  respond-review.md  review-tests.md  review.md  run-test-plan.md  update-pr-desc.md  workflow-builder.md
.claude/: settings.json
.claude/commands/: gen-release-notes.md  ka-greptile-review.md  ka-respond-review.md  ka-review-tests.md  ka-review.md  ka-run-test-plan.md  release-tag.md  release.md  review-css-complexity.md  sp-debug.md
.codex/: auth.json  config.toml  history.jsonl  version.json
.codex/prompts/: doc-research-improvements.md
.gemini/commands/: brainstorming.toml  commit-push.md  commit-push.toml  condition-based-waiting.toml  create-pr.md  create-pr.toml  defense-in-depth.toml  dispatching-parallel-agents.toml  ensure-doc.md  ensure-doc.toml  eval-feedback.md  eval-feedback.toml  executing-plans.toml  finishing-a-development-branch.toml  gen-release-notes.md  gen-release-notes.toml  gen-test-plan.md  gen-test-plan.toml  github-projects.toml  greptile-review.md  greptile-review.toml  prompt-improver.md  prompt-improver.toml  receiving-code-review.toml  requesting-code-review.toml  respond-review.md  respond-review.toml  review-backend.toml  review-frontend.md  review-frontend.toml  review-tests.md  review-tests.toml  review.md  review.toml  root-cause-tracing.toml  run-test-plan.md  run-test-plan.toml  sharing-skills.toml  subagent-driven-development.toml  systematic-debugging.toml  (+12 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: amelia-qa.yml  build-daytona-image.yml  ci.yml  docs.yml  integration-tests.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: pr-autofix-null-update-ignored.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
001-agentic-orchestrator/: tasks.md
001-agentic-orchestrator/contracts/: driver.py
amelia/: __init__.py  config.py  logging.py  main.py
amelia/agents/: __init__.py  _driver_init.py  aggregator.py  architect.py  developer.py  evaluator.py  oracle.py  project_manager.py  reviewer.py  tool_profiles.py
amelia/cli/: __init__.py  config.py
amelia/client/: __init__.py  api.py  cli.py  git.py  models.py  streaming.py
amelia/core/: __init__.py  agentic_state.py  constants.py  context.py  exceptions.py  extraction.py  oracle_types.py  orchestrator.py  retry.py  state.py  text.py  types.py  utils.py
amelia/drivers/: __init__.py  base.py  factory.py  providers.py
amelia/ext/: __init__.py  exceptions.py  hooks.py  noop.py  protocols.py  registry.py
amelia/knowledge/: __init__.py  models.py  (+5 more)
backend/: __init__.py
dashboard/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vitest.config.ts
design-system/: README.md
docs/: README.md  architecture.md  benchmarking.md  concepts.md  configuration.md  data-model.md  deepagents-premature-termination-research.md  roadmap.md  troubleshooting.md  usage.md
frontend-web/: index.html  package-lock.json  package.json  tsconfig.app.json
large_tool_results/: call_function_eys6l7c1y63m_1
scripts/: add_mpl_license.py  backfill-project-areas.sh  build-daytona-image.sh  build-sandbox-base.sh  init-test-db.sh  populate_test_data.py  pr_quality.py  remove_mpl_license.py
tests/: conftest.py
tools/: check_boundaries.py
(+1492 files in other folders)
