[project]
name = "amelia"
version = "0.1.0"
description = "Local LLM Workflow Orchestration"
authors = [
    {name = "Kevin Anderson",email = "anderskev@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.44,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "anthropic (>=0.72.0,<0.73.0)",
    "langgraph (>=1.0.2,<2.0.0)",
    "langchain (>=1.0.5,<2.0.0)",
    "langchain-anthropic (>=1.0.2,<2.0.0)",
    "pydantic-ai (>=1.12.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "structlog (>=25.5.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (<9)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)"
]
