[tool.poetry]
name = "amelia"
version = "0.1.0"
description = "Local LLM Workflow Orchestration"
authors = ["Kevin Anderson <anderskev@gmail.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
asyncpg = "^0.30.0"
alembic = "^1.17.1"
pgvector = "^0.4.1"
anthropic = "^0.72.0"
langgraph = "^1.0.2"
langchain = "^1.0.5"
langchain-anthropic = "^1.0.2"
pydantic-ai = "^1.12.0"
httpx = "^0.28.1"
websockets = "^15.0.1"
rich = "^14.2.0"
structlog = "^25.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "<9"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
black = "^25.9.0"
ruff = "^0.14.4"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
