# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[project]
name = "amelia"
version = "0.1.0"
description = "A local agentic coding system with configurable profiles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.3",
    "pydantic-ai>=1.20.0",
    "pydantic>=2.12.4",
    "rich>=14.1.0",
    "rich-click>=1.9.4",
    "pyyaml>=6.0.2",
    "loguru>=0.7.2",
    "httpx>=0.28.0",
    "typer>=0.15.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "psutil>=6.1.0",
    "aiosqlite>=0.20.0",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "pyjwt[crypto]>=2.9.0",
    "websockets>=15.0",
]

[project.scripts]
amelia = "amelia.main:app"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
    "types-psutil>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amelia"]
artifacts = ["amelia/server/static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC0415"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"amelia/server/routes/*.py" = ["B008"]  # FastAPI Depends() in defaults is intentional
"tests/**/*.py" = ["PLC0415"]  # Imports inside test functions are intentional

[tool.ruff.lint.isort]
known-first-party = ["amelia"]
force-single-line = false
combine-as-imports = true
lines-after-imports = 2
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = [
    "langgraph.checkpoint.sqlite",
    "langgraph.checkpoint.sqlite.aio",
    "psutil",
]
ignore_missing_imports = true
